# meshdb

./: ,  .codecov.yml  .coveragerc  .devcontainer.json  .docker-compose.yaml.swp  .env.container  .env.prod  .env.sample  .flake8  .gitignore  .yamllint  3  Dockerfile  LICENSE  README.md  __init__.py  app.py  celery_beat.sh  celery_liveness.sh  celery_readiness.py  celery_readiness.sh  celery_worker.sh  chomb  db_init.py  docker-compose.yaml  entrypoint.sh  import_spreadsheet_dump.sh  nginx.conf  pyproject.toml  requirements.txt  shell.nix  tasks.py  variables.py  wsgi.py
.github/: dependabot.yml
.github/workflows/: api_net_is_external.yaml  build-push-image.yaml  checkov.yaml  codeql.yaml  deploy-to-k8s.yaml  deploy_dev3.yaml  deploy_prod1.yaml  docker-build-only.yaml  generate_pymeshdb.yaml  helm_lint.yaml  integration.yaml  lint.yaml  main.yaml  main.yml  no_debug_allowed.yaml  no_forgoten_migrations.yaml  publish-and-deploy-gamma.yaml  publish-and-deploy.yaml  run-integ-tests.yaml  run_django_tests.yaml  scorecard.yml  yaml_lint.yaml
api/: __init__.py  api.py  apientry.py  queries.py
auth/: authenticate.py  token.py
db/: database.py
docs/: query_results.md
infra/: README.md  mgr_provision.sh  setup_node.sh
infra/ansible/: ansible.cfg  create_inventory.yaml  install_packages.yaml  inventory.yaml  k8s_lb.yaml  k8s_lb_config.yaml  meshdb.yaml
infra/ansible/lb_config/: frr.conf.j2  haproxy.cfg  iptables.j2  netplan_50_cloud_init.yaml.j2
infra/cluster/: cluster_example.tfvars  longhorn.yaml  main.tf  metallb.yaml  metallb_extra.yaml  vars.tf
infra/helm/meshdb/: .gitignore  Chart.yaml  README.md  example.values.yaml  secret.values.yaml  values.yaml
infra/helm/meshdb-cluster/: .gitignore  Chart.yaml  meshdb-infra.yaml
infra/meshdb/: .gitignore  main.tf  meshdb.yaml
infra/tf/: .gitignore  ansible.tf  cleanup.tf  example.tfvars  gen_ssh_key.sh  k3s.tf  lb.tf  main.tf  mgr.tf  mgr_provision.sh  output.tf  packages.tf  setup_node.sh  stage2.sh  stage2config.tf  vars.tf  workers.tf  workers_k3s.tf
integ-tests/meshapi_integ_test/: integ_test_case.py  test_api_200.py
meshdb/: __init__.py  manage.py  routes.py  views.py
meshdb/auth/: authenticate.py  authmodels.py  token.py
meshdb/data/: database.py  initialize.py  queries.py
meshdb/db/: database.py  queries.py  setup.py
meshdb/meshapi/: permissions.py  serializers.py  urls.py  views.py
meshdb/meshapi/migrations/: 0003_alter_request_install_id.py
meshdb/meshdb/: asgi.py  urls.py
meshdb/models/: building.py  install.py  member.py  request.py
models/: building.py  install.py  member.py  modeltest.py  request.py
nginx/: .meshdb.conf.swp  app.conf
sampledata/: map_json  meshdb.kml  meshdb_local.kml
scripts/: clear_history_tables.sh  create_importable_datadump.sh  create_readonly_user.sh  create_readonly_user.sql  entrypoint.sh  import_datadump.sh  import_spreadsheet_dump.sh  reconcile_stripe_subscriptions.py
scripts/celery/: celery_beat.sh  celery_worker.sh
scripts/celery/probes/: celery_beat_liveness.py  celery_beat_readiness.py  celery_liveness.py  celery_readiness.py
scripts/postgres-pgsql-http/: Dockerfile
src/: environment.py  manage.py
src/meshapi/: admin.py  apps.py  docs.py  exceptions.py  models.py  pelias.py  permissions.py  serializers.py  tasks.py  urls.py  validation.py  views.py  widgets.py  zips.py
src/meshapi/admin/: __init__.py  access_point.py  admin.py  building.py  device.py  inlines.py  install.py  link.py  los.py  member.py  node.py  password_reset.py  ranked_search.py  sector.py  urls.py  utils.py
src/meshapi/migrations/: 0001_initial.py  0001_squashed_0003_alter_request_install_id.py  0001_squashed_0014_rename_phone_numer_member_phone_number.py  0001_squashed_0015_alter_building_bin.py  0001_squashed_0022_alter_building_abandon_date_and_more.py  0002_alter_building_primary_nn_sector_link.py  0002_create_meshdb_ro.py  0002_member_contact_notes_member_invalid_squashed_0012_rename_building_id_install_building_and_more.py  0002_remove_building_panorama_image_install_abandon_date_and_more.py  0002_remove_installer_group_ptr_remove_readonly_group_ptr_and_more.py  0002_remove_sector_ssid_device_ssid_and_more.py  0003_alter_building_building_status_and_more.py  0003_alter_historicalinstall_request_date_and_more.py  0003_alter_install_options_building_panoramas_and_more.py  0003_alter_link_type_alter_sector_status.py  0003_delete_permission.py  0004_alter_historicalinstall_status_and_more.py  0004_alter_historicalnode_type_alter_node_type.py  0004_alter_install_options.py  0004_device_ip_address.py  0004_installer.py  0004_request_roof_access.py  0005_alter_historicalnode_network_number_and_more.py  0005_alter_install_install_status.py  0005_alter_install_options.py  0005_alter_request_install_id.py  0005_historicallink_map_display_override_and_more.py  0005_install_additional_members.py  0005_install_unit_request_referral_request_unit.py  0005_member_stripe_email_address.py  0005_node_map_display.py  0005_node_type.py  0006_alter_building_nodes_alter_building_primary_node_and_more.py  0006_alter_install_additional_members.py  0006_install_additional_members.py  0006_member_stripe_email_address.py  0006_member_stripe_email_address_and_more.py  0006_remove_request_unit.py  0007_alter_install_building_alter_install_member.py  0007_alter_node_network_number.py  (+83 more)
src/meshapi/models/: __init__.py  billing.py  building.py  install.py  iso_639_codes.json  link.py  los.py  member.py  node.py  permission.py
src/meshapi/serializers/: __init__.py  javascript_date_field.py  map.py  model_api.py  nested_key_object_related_field.py  query_api.py  (+1 more)
src/meshapi_hooks/: __init__.py  admin.py  apps.py  hooks.py  models.py  tasks.py
src/meshdb/: admin.py  apps.py  celery.py  environment.py  logger.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
src/meshweb/: middleware.py  urls.py  views.py
tests/: Dockerfile  docker-compose.yaml  requirements.txt  run_integration.sh  test_getMemberByName.py  test_getMembers.py  test_manual_add.py
unit_tests/: test_db.py
(+258 files in other folders)
