[project]
name = "nycmesh-meshdb"
version = "0.1"
dependencies = [
    "celery[redis]==5.3.*",
    "django==4.2.*",
    # We need djangorestframework features that are coming in 3.15.*
    # but that release hasn't shipped yet, so grab the commit that is likely to ship.
    # This will likely have a small diff with the final 3.15.* release, but is much better
    # then pulling their master branch (which changes constantly)
    # FIXME: Go back to PyPI once https://github.com/encode/django-rest-framework/pull/8794 is merged
    "djangorestframework@git+https://github.com/encode/django-rest-framework.git@4bbfa8d4556b5847e91ba95f457cc862b7a0f027",
    # FIXME: Go back to PyPI once https://github.com/danihodovic/django-webhook/pull/22 is merged
    "django-webhook@git+https://github.com/Andrew-Dickinson/django-webhook.git",
    "psycopg2-binary==2.9.*",
    "gunicorn==21.2.*",
    "python-dotenv==1.0.*",
    "stringcase==1.2.*",
    "python-dotenv==1.0.*",
    "py3-validate-email@git+https://gitea.ksol.io/karolyi/py3-validate-email#egg=@v1.0.9",
    "phonenumbers==8.13.*",
    "requests==2.31.*",
    "geopy==2.4.*",
    "django-cors-headers==4.3.*",
    "nameparser==1.1.*",
    "inflect==7.0.*",
]

[project.optional-dependencies]
dev = [
    "invoke == 2.2.*",
    "pytest == 7.4.*",
    "flake8 == 6.1.*",
    "black == 23.7.*",
    "isort == 5.12.*",
    "coverage == 7.3.*",
    "mypy == 1.5.*",
    "flask == 3.0.*",
]

[project.scripts]
meshdb-spreadsheet-import = "meshdb.utils.spreadsheet_import.main:main"

[build-system]
requires = [ "setuptools >= 61", "wheel", "mypy" ]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]


[tool.mypy]
check_untyped_defs = true
show_error_codes = true
pretty = true
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_configs = true


[tool.black]
line-length = 120
include = '\.pyi?$'


[tool.isort]
profile = "black"
line_length = 120
known_first_party = [ "meshdb" ]

