[project]
name = "nycmesh-meshdb"
version = "0.1"
dependencies = [
    "celery[redis]==5.3.*",
    "django==4.2.*",
    # FIXME: Go back to PyPI once DRF adds support for using Django's read-only permissions
    #  https://github.com/nycmeshnet/meshdb/issues/524
    "djangorestframework@git+https://github.com/encode/django-rest-framework.git@4bbfa8d4556b5847e91ba95f457cc862b7a0f027",
    "drf-hooks==0.1.3",
    "psycopg2-binary==2.9.*",
    "gunicorn==23.0.*",
    "django-csp==3.*",
    "django-permissions-policy==4.22.*",
    "python-dotenv==1.0.*",
    "stringcase==1.2.*",
    "python-dotenv==1.0.*",
    "py3-validate-email@git+https://gitea.ksol.io/karolyi/py3-validate-email#egg=@v1.0.9",
    "phonenumbers==8.13.*",
    "requests==2.32.*",
    "requests-mock==1.12.*",
    "geopy==2.4.*",
    "django-cors-headers==4.3.*",
    "inflect==7.0.*",
    "fastkml[lxml]==1.1.0",
    "drf-spectacular==0.27.*",
    "djangorestframework-dataclasses==1.3.*",
    "django-nonrelated-inlines==0.2.*",
    "django-filter==24.1",
    "django-jsonform==2.23.*",
    "faker==24.3.*",
    # FIXME: Go back to PyPI when https://github.com/jazzband/django-dbbackup/pull/515 or https://github.com/jazzband/django-dbbackup/pull/511 is merged
    #  https://github.com/nycmeshnet/meshdb/issues/527
    "django-dbbackup@git+https://github.com/willnilges/django-dbbackup.git@62048411ff5beac4beac1578f686824214f1f33a",
    "django-storages==1.14.*",
    "django-import-export==4.0.*",
    "boto3==1.34.*",
    "six==1.16.0",
    "django-flags==5.0.*",
    "django-sql-explorer==5.2.*",
    "django-simple-history==3.7.*",
    "prettytable==3.11.*",
    "matplotlib==3.9.*",
    "django-ipware==7.0.1",
    "django-admin-site-search==1.1.*",
    "datadog==0.50.*",
    "ddtrace==3.1.*",
    "django-autocomplete-light==3.12.*",
]

[project.optional-dependencies]
dev = [
    "invoke == 2.2.*",
    "pytest == 7.4.*",
    "parameterized == 0.9.*",
    "flake8 == 7.3.*",
    "black == 25.1.*",
    "isort == 6.0.*",
    "coverage == 7.3.*",
    "mypy == 1.11.0",
    "flask == 3.0.*",
    "django-cprofile-middleware==1.0.5",
    "django-silk==5.1.0",
    "types-requests==2.32.*",
    "types-six==1.16.0.*",
    "django-stubs[compatible-mypy]==5.0.*",
    "djangorestframework-stubs[compatible-mypy]==3.15.*",
    "django-filter-stubs==0.1.3",
    "requests-mock==1.12.*",
    "beautifulsoup4==4.12.*",
    "freezegun==1.5.1",
    "moto[s3]==5.0.*",
]

[project.scripts]
meshdb-spreadsheet-import = "meshdb.utils.spreadsheet_import.main:main"

[build-system]
requires = [ "setuptools >= 61", "wheel", "mypy" ]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]


[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
check_untyped_defs = true
show_error_codes = true
pretty = true
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_configs = true
files = [ "src/" ]
exclude = [
    "src/meshapi/tests/.*",
    "src/meshapi_hooks/tests/.*",
    "src/meshapi/migrations/.*",
    "src/meshdb/utils/spreadsheet_import/.*",
    "src/meshapi/util/django_pglocks.py",
    "src/meshapi/models/util/custom_many_to_many.py",
    "src/meshapi/docs.py"
]

[[tool.mypy.overrides]]
module = [
    "meshdb.utils.spreadsheet_import.*",
    "meshapi.util.django_pglocks",
    "meshapi.models.util.custom_many_to_many",
    "meshapi.docs",
]
follow_imports = "skip"


[tool.django-stubs]
django_settings_module = "meshdb.settings"


[tool.black]
line-length = 120
include = '\.pyi?$'


[tool.isort]
profile = "black"
line_length = 120
known_first_party = [ "meshdb" ]

